# seerial-desktop-rs

./: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  video.rs
src/components/: Card.tsx  LangToggle.tsx  Loading.tsx  Page.tsx
src/components/SideBar/: AppSidebar.tsx  NavHomeButton.tsx  NavLibraries.tsx  NavUser.tsx  ServerSwitcher.tsx
src/components/navigation/: NavigationButton.tsx  NavigationContainer.tsx  NavigationGridView.tsx  NavigationScrollView.tsx
src/components/skeletons/: CardGridSkeleton.tsx
src/components/ui/: FlexBox.tsx  Grid.tsx  IconLibrary.tsx  Image.tsx  LazyImage.tsx  SelectableWrapper.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  button.tsx  card.tsx  carousel.tsx  context-menu.tsx  dropdown-menu.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  toast.tsx
src/context/: auth.context.tsx  data.context.tsx  server.context.tsx  ws.context.tsx
src/data/enums/: Sections.ts  WSMessage.ts
src/data/interfaces/: Lists.ts  Media.ts  Music.ts  State.ts  Users.ts  Utils.ts
src/hooks/: useCardWidth.ts  useFetch.tsx  useLocalStorage.ts
src/layouts/: BaseLayout.tsx  SidebarLayout.tsx
src/layouts/components/: LibrariesList.tsx  TopBar.tsx
src/lib/: auth.ts  store.ts
src/localization/: TrackLanguages.ts  i18n.ts  langs.ts
src/routes/: root.tsx  routes.tsx
src/styles/: animations.css  global.css  utils.css
src/utils/: ReactUtils.tsx  constants.tsx  utils.ts
(+29 files in other folders)
