[package]
name = "seerial-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seerial_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.30.11"
glutin = "0.32.3"
glutin-winit = "0.5.0"
gl = "0.14.0"
libmpv2="4.1.0"
raw-window-handle = "0.6.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
